--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,9 +6,16 @@ body, html {
   width: 100%;
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f4;
+  background-image: url('../images/Fondo.jpg');
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#root{
+  background-color: #FFFFFF;
+  border-radius: 5% 5%;
 }
 
 /* Contenedor principal en dos columnas */
@@ -32,12 +39,17 @@ body, html {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
-  opacity: 0.9;
+  opacity: 50.9;
   padding: 20px;
+}
+
+.auth-image p{
+  background-color: #1b5232;
+  border-radius: 30% 30%;
 }
 
 /* Sección de formulario */
@@ -367,3 +379,4 @@ button.dark-mode {
 button.dark-mode:hover {
   background-color: #1A8C3F; /* Verde oscuro */
 }
+
